force-app/main/default/objects/Product_Price_History__c/Product_Price_History__c.object-meta.xml
<CustomObject>
    <label>Product Price History</label>
    <nameField>
        <displayFormat>PPH-{0000}-{DD}-{MM}-{YYYY}</displayFormat>
        <label>Product Price History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Products Prices History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>