force-app/main/default/objects/Product_Price_History__c/fields/Nuevo_precio__c.field-meta.xml
<CustomField>
    <fullName>Nuevo_precio__c</fullName>
    <label>Nuevo precio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>