force-app/main/default/objects/Product_Price_History__c/fields/Precio_anterior__c.field-meta.xml
<CustomField>
    <fullName>Precio_anterior__c</fullName>
    <label>Precio anterior</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>