force-app/main/default/objects/Product_Price_History__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Products Prices History</relationshipLabel>
    <relationshipName>Products_Prices_History</relationshipName>
    <type>Lookup</type>
</CustomField>